--- a/HTML/Assignment 1/assignment1/about.html
+++ b/HTML/Assignment 1/assignment1/about.html
@@ -13,16 +13,16 @@
     <!-- the "content"-class will contain all the content of this HTML-page, to be able to set 1024px-width and to be centered. -->
     <div class="content">
       <header>
-        <!-- I put the sitename-div and nav in divs, to place them sidebyside with css -->
+        <!-- I put the sitename and nav in divs, to place them sidebyside -->
         <div class="headerSiteName">
-          <h1>Tobias HTML/CSS Assignment.</h1>
+          <h1>Tobias HTML/CSS</h1>
         </div>
 
         <div class="headerNav">
           <nav>
             <ul>
               <li><a href="index.html">Start</a></li>
-              <li class="active"><a href="#">About</a></li>
+              <li><a href="#" class="active">About</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
@@ -32,16 +32,16 @@
       <!-- The <main> and <aside> will be side-by-side, so i to put them in a div-container called "mainContent" -->
       <div class="mainContent">
         <main>
-          <div>
+          <div class="subHeader">
             <h2>About this project</h2>
 
             <p>
               This is an assignment in HTML / CSS at Lexicon. <br />The layout
               on index.html should look like: <br /><br />
-              <img src="layout.png" alt="layout requirements" /><br />
+              <img src="layout.png" alt="layout criterias" /><br />
               Other requirements is:<br />
-              <img src="req1.png" alt="requirement" /><br />
-              <img src="req2.png" alt="requirement" /><br />
+              <img src="criteria1.png" alt="criterias" /><br />
+              <img src="criteria2.png" alt="criterias" /><br />
             </p>
             <br /><br />
           </div>
