--- a/HTML/Assignment 1/assignment1/contact.html
+++ b/HTML/Assignment 1/assignment1/contact.html
@@ -15,7 +15,7 @@
       <header>
         <!-- I put the sitename and nav in divs, to place them sidebyside -->
         <div class="headerSiteName">
-          <h1>Tobias HTML/CSS Assignment.</h1>
+          <h1>Tobias HTML/CSS</h1>
         </div>
 
         <div class="headerNav">
@@ -23,7 +23,7 @@
             <ul>
               <li><a href="index.html">Start</a></li>
               <li><a href="about.html">About</a></li>
-              <li class="active"><a href="#">Contact</a></li>
+              <li><a href="#" class="active">Contact</a></li>
             </ul>
           </nav>
         </div>
@@ -32,11 +32,11 @@
       <!-- The <main> and <aside> will be side-by-side, so i to put them in a div-container called "mainContent" -->
       <div class="mainContent">
         <main>
-          <div>
-            <h2>Contect</h2>
+          <div class="subHeader">
+            <h2>Contact me!</h2>
 
             <p>
-              Email me at:
+              Email me at
               <a href="mailto:hungatobbe@gmail.com">hungatobbe@gmail.com</a>!
             </p>
             <br /><br />
