--- a/HTML/Assignment 2/hobbies.html
+++ b/HTML/Assignment 2/hobbies.html
@@ -26,7 +26,13 @@
         i like to make music, mostly in FL Studio. I also like to do creative
         programming in processing / p5. I have made an illusion spiral, try it:
         <br /><br />
-        <a href="Spiral/spiral.html">SPIRAL!</a>
+        <center>
+          <a href="Spiral/spiral.html"
+            ><img src="spiral.png" width="300" /><br /><br /><bold
+              >SPIRAL!</bold
+            ></a
+          ><br /><br /><br /><br />
+        </center>
       </div>
     </main>
 
